--- a/TeduShop.Data/TeduShop.Data.csproj
+++ b/TeduShop.Data/TeduShop.Data.csproj
@@ -58,8 +58,17 @@
     <Compile Include="Migrations\201709300814266_InitialDB.Designer.cs">
       <DependentUpon>201709300814266_InitialDB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709301046066_InitialDB1.cs" />
+    <Compile Include="Migrations\201709301046066_InitialDB1.Designer.cs">
+      <DependentUpon>201709301046066_InitialDB1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709301314418_AddErrorTable.cs" />
+    <Compile Include="Migrations\201709301314418_AddErrorTable.Designer.cs">
+      <DependentUpon>201709301314418_AddErrorTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ErrorRepository.cs" />
     <Compile Include="Repositories\FooterRepository.cs" />
     <Compile Include="Repositories\MenuGroupRepository.cs" />
     <Compile Include="Repositories\MenuRepository.cs" />
@@ -96,6 +105,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201709300814266_InitialDB.resx">
       <DependentUpon>201709300814266_InitialDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709301046066_InitialDB1.resx">
+      <DependentUpon>201709301046066_InitialDB1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709301314418_AddErrorTable.resx">
+      <DependentUpon>201709301314418_AddErrorTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
